--- a/src/main/java/com/mycompany/peluqueriacanina/igu/CargaDatos.form
+++ b/src/main/java/com/mycompany/peluqueriacanina/igu/CargaDatos.form
@@ -273,6 +273,9 @@
                 <Component class="javax.swing.JTextField" name="txtRaza">
                 </Component>
                 <Component class="javax.swing.JTextField" name="txtColor">
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtColorActionPerformed"/>
+                  </Events>
                 </Component>
                 <Container class="javax.swing.JScrollPane" name="jScrollPane1">
                   <AuxValues>
