--- a/src/main/java/com/mycompany/peluqueriacanina/igu/Principal.form
+++ b/src/main/java/com/mycompany/peluqueriacanina/igu/Principal.form
@@ -82,7 +82,7 @@
                   <Group type="102" alignment="1" attributes="0">
                       <EmptySpace pref="91" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="1" attributes="0">
-                          <Component id="jButton5" min="-2" pref="260" max="-2" attributes="0"/>
+                          <Component id="btnCargaDatos" min="-2" pref="260" max="-2" attributes="0"/>
                           <Component id="jButton3" min="-2" pref="260" max="-2" attributes="0"/>
                           <Component id="jButton4" min="-2" pref="260" max="-2" attributes="0"/>
                       </Group>
@@ -98,7 +98,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
-                              <Component id="jButton5" min="-2" pref="61" max="-2" attributes="0"/>
+                              <Component id="btnCargaDatos" min="-2" pref="61" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="58" max="-2" attributes="0"/>
                               <Component id="jButton3" min="-2" pref="61" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
@@ -122,6 +122,9 @@
                 </Property>
                 <Property name="text" type="java.lang.String" value="Ver Datos"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton3ActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="jButton4">
               <Properties>
@@ -131,7 +134,7 @@
                 <Property name="text" type="java.lang.String" value="Salir"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="jButton5">
+            <Component class="javax.swing.JButton" name="btnCargaDatos">
               <Properties>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Dialog" size="18" style="0"/>
@@ -139,7 +142,7 @@
                 <Property name="text" type="java.lang.String" value="Cargar Datos"/>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton5ActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCargaDatosActionPerformed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel2">
